--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="settings">
-        <img src="../assets/settings.png" alt="" />
+        <img src="./assets/settings.png" alt="" />
     </div>
     <div class="logo flex justify-center">
-        <img src="../assets/logo.png" alt="" />
+        <img src="./assets/logo.png" alt="" />
     </div>
     <div class="buttons flex justify-center">
         <button class="play btn-green bold border-none btn-bg">
