html css complete

--- a/story/story.html
+++ b/story/story.html
@@ -19,15 +19,17 @@
           <img src="../assets/settings.png" alt="" />
         </div>
       </div>
-      <div class="circles flex ">
-          <div class="c1"></div>
-          <div class="c2"></div>
-        <div class="c3">
-            <p>In "Puzzle Paradise: Where Puzzle Meets Paradise," players embark on a thrilling adventure to explore the mysteries of an uncharted island paradise. This tropical haven is filled with hidden island images in unsolved pieces waiting to be uncovered through a series of image grid puzzles. Players have the freedom to select their preferred difficulty level, shaping the intensity of their island expedition</p>
+      <div class="main">
+        <div class="circles flex ">
+            <div class="c1"></div>
+            <div class="c2"></div>
+          <div class="c3">
+              <p>In "Puzzle Paradise: Where Puzzle Meets Paradise," players embark on a thrilling adventure to explore the mysteries of an uncharted island paradise. This tropical haven is filled with hidden island images in unsolved pieces waiting to be uncovered through a series of image grid puzzles. Players have the freedom to select their preferred difficulty level, shaping the intensity of their island expedition</p>
+          </div>
         </div>
-      </div>
-      <div class="captain flex">
-        <img src="../assets/captain.png" alt="">
+        <div class="captain flex">
+          <img src="../assets/captain.png" alt="">
+        </div>
       </div>
 </body>
 </html>
