--- a/html/story.html
+++ b/html/story.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Story-Page</title>
-    <link rel="stylesheet" href="./story.css" />
-    <script src="./story.js"></script>
+    <link rel="stylesheet" href="../css/story.css" />
 </head>
 <body>
     <div class="bg">
         <img src="../assets/fantasy-island.png" alt="">
     </div>
     <div class="navbar flex justify-space-between align-center">
-        <div class="small-logo">
-          <img src="../assets/small-logo.png" alt="" />
+        <div class="small-logo" id="logo">
+          <!-- <img src="../assets/small-logo.png" alt="" /> -->
         </div>
         <div class="settings">
           <img src="../assets/settings.png" alt="" />
@@ -32,4 +31,5 @@
         </div>
       </div>
 </body>
+<script src="../javascript/story.js"></script>
 </html>
