--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Start-Page</title>
-    <link rel="stylesheet" href="./styles.css" />
-    <script src="./app.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
     <div class="settings">
@@ -16,13 +15,13 @@
         <img src="./assets/logo.png" alt="" />
     </div>
     <div class="buttons flex justify-center">
-        <button class="play btn-green bold border-none btn-bg">
+        <button class="play btn-green bold border-none btn-bg" id="play">
             <p>PLAY</p>
         </button>
-        <button class="instructions btn-green bold border-none btn-bg">
+        <button class="instructions btn-green bold border-none btn-bg" id="instructions">
             <p>INSTRUCTIONS</p>
         </button>
     </div>
 </body>
-
+<script src="./javascript/app.js"></script>
 </html>
