--- a/html/instructions.html
+++ b/html/instructions.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instructions-Page</title>
-    <link rel="stylesheet" href="./instructions.css" />
-    <script src="./instructions.js"></script>
+    <link rel="stylesheet" href="../css/instructions.css" />
   </head>
   <body>
     <div class="bg">
-      <img src="../assets/Start instruction background.png" alt="" />
+      <img src="../assets/start-instruction-bg.png" alt="" />
     </div>
     <div class="navbar flex justify-space-between align-center">
-      <div class="small-logo">
+      <div class="small-logo" id="logo">
         <img src="../assets/small-logo.png" alt="" />
       </div>
       <div class="settings">
@@ -20,6 +19,7 @@
       </div>
     </div>
     <div class="flex justify-center">
+      <div id="cross">X</div>
       <div class="flex column content">
         <h1>INSTRUCTIONS</h1>
         <ul class="instructions">
@@ -42,4 +42,5 @@
       </div>
     </div>
   </body>
-</html>
+  <script src="../javascript/instructions.js"></script>
+  </html>
